update language rake and locale files

--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -39,6 +39,8 @@ el:
     invalid_email: "Παρακαλούμε δηλώστε τουλάχιστον μια έγκυρη ηλεκτρονική διεύθυνση"
     image_upload_fail: "Δεν μπορείτε να ανεβάσετε την εικόνα. Βεβαιωθείτε ότι η εικόνα είναι κάτω από 1 MB και είναι αρχείο  .jpeg, .png, ή .gif."
     motion_closing_inputs: "Λανθασμένη ημερομηνία κλεισίματος"
+    motion_outcome_not_created: "Αδύνατον η δημοσίευση του αποτελέσματος."
+    motion_outcome_not_updated: "Αδύνατον η ανανέωση του αποτελέσματος."
     only_group_coordinator_destroy: "Δεν μπορείτε να φύγετε από αυτή την ομάδα επειδή είστε ο μοναδικός συντονιστής. Μπορείτε να απενεργοποιήσετε την ομάδα σας από το κουτί επιλογών ή <a href='%{add_coordinator}'>να προστέσετε νέο συντονιστής</a> στην ομάδα."
     only_group_coordinator_remove_admin: "Η ομάδα πρέπει να έχει έναν συντονιστή. Θέλετε να προσθέσετε άλλον συντονιστή στην ομάδα?"
     permission_to_invite: "Δεν έχετε το δικαιώμα να προσκαλέσετε νέα μέλη."
@@ -103,7 +105,9 @@ el:
     group_archived: "Η ομάδα αρχειοθετήθηκε επιτυχώς."
     group_created: "Η ομάδα δημιουργήθηκε επιτυχώς."
     members_added: "Μέλη προστέθηκαν στην ομάδα."
-    membership_requested: "Αίτηση μέλους. Θα ειδοποιηθείτε όταν η αίτηση σας γίνει δεκτή."
+    membership_requested: "Έχετε αιτηθεί για να συμμετάσχετε στην ομάδα %{which_group}. Θα ειδοποιηθείτε μόλις η αίτηση σας γίνει δεκτή."
+    motion_outcome_created: "Συγχαρητήρια, δημιουργήσατε το αποτέλεσμα της πρότασης και τα μέλη της ομάδας σας θα ειδοποιηθούν."
+    motion_outcome_updated: "Το αποτέλεσμα της πρότασης ανανεώθηκε."
     position_submitted: "Θέση υποβλήθηκε"
     position_updated: "Η θέση ενημερώθηκε."
     proposal_created: "Η πρόταση δημιουργήθηκε επιτυχώς."
@@ -168,6 +172,8 @@ el:
     user_added_to_group: "προστεθήκατε στην ομάδα"
     motion_closing_soon: "Η πρόταση κλείνει σύντομα"
     motion_blocked: "μπλόκαρε την πρόταση"
+    motion_outcome_created: "δημοσιεύτηκε το αποτέλεσμα για την πρόταση"
+    motion_outcome_updated: "ανανεώθηκε το αποτέλεσμα για την πρόταση"
   edit_discussion_context: "Επεξεργασία περιεχομένου συζήτησης"
   request_new_group: "Ξεκινήστε μια ομάδα"
   request_new_group_details: "ή περιμένετε μέχρι να σας προσκαλέσουν σε μία."
@@ -177,9 +183,8 @@ el:
   email_preferences: "Προτιμήσεις Ηλεκτρονικού Ταχυδρομείου"
   sign_out: "Έξοδος"
   sign_in: "Είσοδος"
+  honeypot_warning: "Ο λογαριασμός σας δεν ήταν δυνατό να δημιουργηθεί. Αν χρησιμοποιείτε αναγνώστη οθόνης, παρακαλώ σιγουρευτείτε ότι το τελευταίο (κρυφό) πεδίο στη φόρμα είναι κενό."
   tagline: "Δημιουργώντας έναν κόσμο όπου είναι εύκολο για τον καθένα να συμμετάσχει σε αποφάσεις που τους αφορούν."
-  or_sign_in_html: "Έχετε ήδη Loomio λογαριασμό? <a href='%{link}'>εισέλθετε εδώ</a>"
-  or_link_account_html: "Έχετε ήδη Loomio λογαριασμό? <a href='%{link}'>Συνδέστε τον</a>"
   click_to_dismiss: "Πατήστε εδώ για απορίψετε αυτό το μήνυμα."
   generic_confirm: "Είστε σίγουροι?"
   discussion_helper_text:
@@ -218,6 +223,7 @@ el:
   deactivate_group: "Απενεργοποιήστε την ομάδα"
   confirm_deactivate_group: "Περιμένετε!!! Είστε σίγουροι ότι θέλετε να απενεργοποιήσετε την ομάδα %{which_group}? Δεν θα μπορείτε να βλέπετε πια την ομάδα. Ωστόσο, εάν επιθυμείτε να ξανά-ενεργοποιήσετε την ομάδα πάλι μπορείτε να μας το ζητήσετε στέλνοντας ηλεκτρονικό μήνυμα στο contact@loomio.org."
   invited_users: "Τα μέλη προσκαλέστηκαν"
+  members: "Μέλη"
   confirm_remove_user: "Είστε σίγουροι ότι θέλετε να αφαιρέσετε τον/την %{which_user} από την ομάδα?"
   remove_coordinator: "Αφαιρέστε συντονιστή"
   confirm_remove_coordinator: "Είστε σίγουροι ότι δεν θέλετε ο/η %{which_user} να είναι συντονιστής για αυτή την ομάδα?"
@@ -233,6 +239,7 @@ el:
   confirm_ignore_membership_request: "Είστε σίγουροι πως θέλετε να αγνοήσετε την αίτηση μέλους από τον/την %{which_user}?"
   membership_requested: "Αίτηση μέλους έχει ζητηθεί."
   request_membership: "Αίτηση για μέλος"
+  ask_to_join_group: "Δηλώστε συμμετοχή στην ομάδα"
   confirm_remove_membership_request: "Είστε σίγουροι πως επιθυμείτε να αποσύρετε την αίτηση μέλους για αυτήν την ομάδα?"
   no_pending_membership_requests: "Δεν υπάρχουν τωρινές αιτήσεις μελών σε αναμονή για αυτή την ομάδα."
   subgroups: "Υπο-ομάδες"
@@ -243,9 +250,8 @@ el:
   new_subgroup: "Νέα υπο-ομάδα"
   create_subgroup: "Δημιουργία υπο-ομάδας"
   creating_subgroup: "Δημιουργείτε υπο-ομάδα"
-  group_privacy: "Απόρρητο: '%{who}' μπορεί να δει αυτή την ομάδα."
-  parent_group_members: "Μέλη της κύριας ομάδας"
-  members: "Μέλη"
+  secret: "Κρυφό"
+  public: "Δημόσιο"
   new_group: "Νέα ομάδα"
   create_group: "Δημιουργία ομάδας"
   creating_group: "Δημιουργείτε ομάδα"
@@ -270,6 +276,8 @@ el:
       by_user: "έκλεισε την πρόταση"
       by_expiry: "η πρόταση έκλεισε"
     motion_close_date_edited: "άλλαξε η ημερομηνία κλεισίματος για την πρόταση"
+    motion_outcome_created: "δημοσιεύτηκε το αποτέλεσμα για την πρόταση"
+    motion_outcome_updated: "ανανεώθηκε το αποτέλεσμα για την πρόταση"
     discussion_title_edited: "άλλαξε ο τίτλος της συζήτησης"
     discussion_description_edited: "άλλαξε η περιγραφή της συζήτησης"
   discussion: "Συζήτηση"
@@ -302,6 +310,7 @@ el:
   confirm_delete_comment: "Είστε σίγουροι ότι θέλετε να διαγράψετε αυτό το σχόλιο?"
   markdown_settings_more_info: "Περισσότερες πληροφορίες..."
   edit_discussion_title: "Επεξεργασία του τίτλου συζήτησης"
+  move_discussion: "Μετακίνηση συζήτησης"
   delete_discussion: "Διαγραφή συζήτησης"
   confirm_delete_discussion: "Είστε σίγουροι ότι θέλετε να διαγράψετε μόνιμα αυτή την συζήτηση?"
   new_proposal: "Νέα πρόταση"
@@ -309,6 +318,7 @@ el:
   confirm_close_proposal: "Είστε σίγουροι ότι θέλετε να κλείσετε αυτήν την πρόταση?"
   change_proposal_close_date: "Αλλάξτε την ημερομηνία κλεισίματος"
   change_proposal_close_date_header: "Αλλάξτε την ημερομηνία κλεισίματος για την πρόταση '%{which}'"
+  proposal: Πρόταση
   proposal_close_date_error: "Παρακαλούμε δώστε μελλοντική ημερομηνία κλεισίματος"
   proposal_closing_when: "Κλείνει σε %{when}"
   proposal_closed_when: "Έκλεισε πριν από %{when}"
@@ -326,8 +336,8 @@ el:
   block_position: "Μπλοκάρω"
   block_details: "Έχω σοβαρές αντιρρήσεις για αυτή την πρόταση και δεν είμαι καλά με το να προχωρήσει."
   not_voted: "[Δείξε τα μέλη που δεν έχουν αποφασίσει ακόμα]"
-  outcome: "Αποτέλεσμα"
   outcome_placeholder: "Ποιό ήταν το αποτέλεσμα αυτής της πρότασης?"
+  outcome_submit: "Δημοσίευση αποτελέσματος"
   position_verbs:
     'yes': "Συμφωνώ"
     'no': "Διαφωνώ"
@@ -477,10 +487,8 @@ el:
   create_an_account: 'Δημιουργήστε ένα λογαριασμό'
   join_group:
     log_in: "Εισέλθετε για να συμμετάσχετε στο/στη/στους %{group_name}"
-    create_account: "Δημιουργήστε ένα λογαριασμό"
   start_group:
     log_in: "Συνδεθείτε για να ρυθμίσετε την ομάδα σας"
-    create_account: "Δημιουργήστε ένα λογαριασμό"
   invitation:
     no_invitations_left: "Συγνώμη δεν έχουν απομείνει άλλες προσκλήσεις"
     no_invitations_left_get_more: "Παρακαλούμε στείλτε ηλεκτρονικό μήνυμα στο contact@loomio.org και θα δούμε τι μπορούμε να κάνουμε"
@@ -525,7 +533,6 @@ el:
     header: "Νέα Πρόταση"
     name_helper: "Κάντε τον τίτλος όσο πιο σαφή και συνοπτικό γίνετε."
   group_form:
-    privacy_settings: "Ρυθμίσεις Απορρήτου"
     invitation_settings: "Ρυθμίσεις προσκλήσεων"
     admins_only: "Μόνο Συντονιστές"
   vote_form:
@@ -554,6 +561,7 @@ el:
     use_avatar_kind: "Χρησιμοποιήστε %{kind}"
     upload_new_image: "Ανεβάστε νέα εικόνα"
   group_setup:
+    set_up_your_group: Ρυθμίστε την ομάδα σας
     desc_header: "Σχεδόν τελειώσατε!"
     desc_html: "Ως συντονιστής της ομάδας, είστε υπεύθυνος για να ρυθμίσετε και να διαχειριστείτε την ομάδα σας στο Loomio. Έπειτα εφ όσον επιλέξετε μερικές ρυθμίσεις, μπορείτε να μπείτε στην νέα σας ομάδα, να ξεκινήσετε μια συζήτηση ή δύο, και να στείλετε κάποιες προσκλήσεις!  <p>Όταν σκέφτεστε το πιο απλό τρόπο για να περιγράψετε την ομάδα σας, ρωτήστε τον εαυτό σας: Τι θέλετε να πετύχετε μαζί? Τι είδος αποφάσεις θέλετε να λαμβάνετε? Ποιός θα εμπλέκεται?</p>"
     submit: "Πήγαινε με στην ομάδα μου!"
@@ -570,10 +578,24 @@ el:
         title: "Τίτλος"
         description: "Περιεχόμενο"
       group:
-        name: "Ποιο είναι το όνομα της ομάδα σας?"
-        description: "Περιγραφή ομάδας:"
-        viewable_by: "Ποιος μπορείς να δει αυτή την ομάδα?"
+        name: "Όνομα ομάδας"
+        description: "Περιγραφή"
         members_invitable_by: "Ποιος μπορεί να προσκαλέσει άτομα σε αυτή την ομάδα?"
+        members_invitable_by_coordinators: "Μόνο Συντονιστές"
+        members_invitable_by_members: "Όλα τα μέλη της ομάδας"
+        privacy: Ιδιωτικότητα
+        privacy_public_header: Δημόσιο
+        privacy_public_description: Οποιοσδήποτε μπορεί να δει την ομάδα και ποιός είναι μέσα σε αυτήν. Οι Συζητήσεις είναι δημόσιες από προεπιλογή.
+        privacy_public_description_short: Οποιοσδήποτε μπορεί να δει αυτή την ομάδα και τις συζητήσεις.
+        privacy_secret_header: Κρυφό
+        privacy_secret_description: Μόνο τα μέλη μπορούν να δουν την ομάδα και τις συζητήσεις. Δεν μπορείτε να έχετε δημόσιες συζητήσεις σε κρυφή ομάδα.
+        privacy_secret_description_short: Μόνο τα μέλη μπορούν να δουν αυτή την ομάδα και τις συζητήσεις.
+        privacy_parent_group_members_header: Φαίνεται από τα μέλη της κεντρικής ομάδας
+        privacy_parent_group_members_description: Το ίδιο σαν κρυφό, μόνο που η ομάδα και οι συζητήσεις σε αυτήν μπορούν να φανούν από τα μέλη της κύριας ομάδας.
+        privacy_parent_group_members_description_short: Μόνο τα μέλη και τα μέλη της κύριας ομάδας μπορούν να δουν αυτή την ομάδα και τις συζητήσεις τις.
+        group_members_invitable_by: "Μόνο συντονιστές"
+        submit: Υποβολή
+        viewable_by_parent_members_header: Επιτρέψτε σε όλα τα μέλη της ομάδας %{group} να βλέπουν αυτή την υπό-ομάδα και τις συζητήσεις τους
       membership_request:
         introduction: "Συστηθείτε"
       motion:
@@ -586,11 +608,6 @@ el:
         password: "Κωδικός"
         password_confirmation: "Επιβεβαίωση κωδικού"
         language_preference: "Γλώσσα"
-    options:
-      group:
-        members_invitable_by:
-          admins: 'Μόνο Συντονιστές'
-          members: 'Όλα τα μέλη της Ομάδας'
     placeholders:
       discussion:
         title: "Ποιό είναι το θέμα που θα θέλατε να συζητήσετε?"
@@ -601,7 +618,8 @@ el:
         name: "Ποια είναι η δικιά σας προτεινόμενη πορεία δράσης?"
         description: "Δώστε αρκετές πληροφορίες ώστε ο καθένας να γνωρίζει ακριβώς τι σημαίνει να συμφωνεί ή να διαφωνεί."
       group:
-        description: "Σκέψου με τον πιο απλό τρόπο για να περιγράψεις την ομάδα σου: Τι θέλετε να πετύχετε μαζί? Τι είδους αποφάσεις θέλετε να κάνετε? Ποιος θα εμπλέκεται?"
+        name: "Όνομα ομάδας"
+        description: "Περιγραφή ομάδας"
       user:
         email: "Ηλεκτρονική Διεύθυνση"
         password: "Κωδικός"
@@ -624,6 +642,7 @@ el:
     view_discussion: "Πατήστε εδώ για να δείτε αυτή την συζήτηση"
     view_group: "Πατήστε εδώ για να δείτε την ομάδα στο Loomio"
     view_proposal: "Εμφάνιση αυτής της πρότασης στο Loomio"
+    campaign_html: "Ήταν αυτή η απόφαση σημαντική για εσάς? Σκεφτείτε <a href='%{link_path}'>να γίνετε χορηγός του Loomio</a> και βοηθήστε μας να το διαδώσουμε στον κόσμο. Είμαστε μια μικρή ομάδα που προσπαθεί να κάνει μεγάλα πράγματα και χρειαζόμαστε την συνδρομή σου για να συνεχίσουμε να μεγαλώνουμε!"
     create_discussion:
       intro: "Ο/Η %{who} ξεκίνησε μια νέα συζήτηση στην ομάδα %{which_group}:"
       subject: "Νέα Συζήτηση - %{which}"
@@ -649,7 +668,6 @@ el:
         Η ομάδα του Loomio
     membership_request:
       intro: "Ο/Η %{name} (%{email}) έχει ζητήσει πρόσβαση σε μία από τις Loomio ομάδες σας."
-      subject: "Νέα αίτηση μέλους από %{who}"
       view_group: "Μπορείς να εγκρίνεις ή να απορρίψεις την αίτηση εδώ"
     mentioned:
       intro: "Έχεις αναφερθεί σε μια συζήτηση με τίτλο:"
@@ -659,8 +677,12 @@ el:
       context: "%{author} δημιούργησε μια πρόταση στο %{group_full_name}:"
     proposal_closed:
       intro: 'Η πρόταση σας "%{proposal_name}" έχει κλείσει.'
-      specify_outcome: "Παρακαλούμε πατήστε εδώ για να καθορίσετε το αποτέλεσμα"
+      intro_html: 'Η πρόταση σας "%{proposal_name}" έκλεισε.'
+      specify_outcome_and_notify_group: "Δημιουργήστε ένα αποτέλεσμα και στείλτε το στην ομάδα σας!"
+      specify_outcome_and_notify_group_html: "Δημιουργήστε ένα αποτέλεσμα και στείλτε το στην ομάδα σας!"
       subject: "Πρόταση έκλεισε  - %{which}"
+    proposal_outcome:
+      subject: "αποτέλεσμα πρότασης"
     proposal_blocked:
       intro: "Μια πρόταση που σε διευκολύνει έχει μπλοκαριστεί."
       subject: "Πρόταση μπλοκαρίστηκε  - %{which}"
@@ -727,9 +749,9 @@ el:
   name: "Όνομα"
   new_activity: "Νέα δραστηριότητα"
   next: "Επόμενο"
+  outcome: "Αποτέλεσμα"
   password: "Κωδικός"
   pricing: 'Τιμολόγηση'
-  proposal: "Πρόταση"
   prev: "Προηγούμενο"
   translate: "Βοηθήστε με την μετάφραση του Loomio!"
   options: "Ρυθμίσεις"
